cka/nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-kusc00401
spec:
  containers:
  - name: nginx
  image: nginx
  nodeSelector:
    disk: ssd
