cka/pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
spec:
  containers:
    - name: web-server
      image: nginx
      ports:
        - name: http-server
          containerPort: 80
      volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: my-pvc
  volumes:
    - name: my-pvc
      persistentVolumeClaim:
        claimName: pv-volume
